--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(234, 234, 234);
+    background-color: rgb(231, 231, 231);
 }
 
 .container{
@@ -40,6 +40,7 @@ body{
     background-color: rgb(239, 237, 235);
     flex-grow: 1;
     outline: 0;
+    font-size: 15px;
 }
 .search-icon{
     height: 35px;
@@ -62,6 +63,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0px 0px;
 }
 
 .weather-icon{
@@ -69,7 +71,7 @@ body{
     width: 200px;
 }
 .temp{
-    font-size: 100px;
+    font-size: 70px;
     color: white;
 }
 .city-name{
