--- a/style.css
+++ b/style.css
@@ -32,16 +32,38 @@ body{
 }
 
 .search-box{
-    margin: 5px;
-    padding: 0px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px solid;
+    margin: 5px 0px;
+    padding: 0px 10px;
     height: 40px;
     border: 2px rgb(254, 254, 254);
     border-radius: 30px;
-    background-color: rgb(239, 237, 235);
+    background-color: white;
     flex-grow: 1;
-    outline: 0;
     font-size: 15px;
 }
+
+.search-bar{
+    border: 0px;
+    background-color: white;
+    outline: 0;
+}
+
+.microphone{
+    height: 30px;
+    width: 30px;
+    transition: 0.5s;
+}
+
+.microphone:hover{
+    height: 25px;
+    width: 25px;
+    cursor: pointer;
+}
+
 .search-icon{
     /* border: 2px solid; */
     height: 35px;
@@ -52,6 +74,19 @@ body{
 }
 
 .search-icon:hover{
+    height: 45px;
+    cursor: pointer;
+}
+
+.text-to-speech{
+    /* border: 2px solid; */
+    height: 40px;
+    margin: 0px 4px;
+    border-radius: 50%;
+    padding: 4px;
+    transition: 0.5s;
+}
+.text-to-speech:hover{
     height: 45px;
     cursor: pointer;
 }
@@ -91,12 +126,12 @@ body{
 }
 .humidity-box{
     display: flex;
-    font-size: 18px;
+    font-size: 15px;
     color: rgb(230, 227, 227);
 }
 .humidity-icon{
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
 }
 .humidity-box .humidity p{
     margin: 0px;
@@ -105,12 +140,12 @@ body{
 
 .wind-box{
     display: flex;
-    font-size: 18px;
+    font-size: 15px;
     color: rgb(230, 227, 227);
 }
 .wind-icon{
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
 }
 .wind-box .wind p{
     margin: 0px;
